--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://avatars1.githubusercontent.com/u/64649709?s=60&v=4" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="/static/img/me.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey there {{name}}!</h1>
                         <hr class="star-light">
